[tool.poetry]
name = "asuna-chan"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.6.0"
python-dotenv = "^0.15.0"
Flask = "^1.1.2"
requests = "^2.25.1"
google-api-python-client = "^2.0.2"
youtube-dl = "^2021.3.3"
DiscordUtils = "^1.3.4"
discord-components = "^0.5.3"
# discord-buttons = "^0.5"
PyNaCl = "^1.4.0"
markupsafe ="2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
